@@ -631,11 +631,11 @@
 	const EVENT_ENDON_CAVE_1F_SUPER_POTION
 	const EVENT_ENDON_CAVE_1F_ULTRA_BALL
 	const EVENT_ENDON_CAVE_1F_STEEL_SHELL
-	const EVENT_39C
-	const EVENT_39D
-	const EVENT_39E
-	const EVENT_39F
-	const EVENT_3A0
+	const EVENT_GOT_HOTEL_PASS
+	const EVENT_HOTEL_UPSTAIRS_IS_BLOCKED
+	const EVENT_HOTEL_UPSTAIRS_IS_NOT_BLOCKED
+	const EVENT_BATTLED_OAK
+	const EVENT_OAK_HERE_ON_WEEKENDS
 	const EVENT_3A1
 	const EVENT_3A2
 	const EVENT_3A3
