@@ -47,6 +47,7 @@ SCENE_FINISHED EQU 1
 	const SCENE_OAK_LAB_FRONT_ROOM_DAISY
 	const SCENE_OAK_LAB_FRONT_ROOM_GO_SEE_OAK
 	const SCENE_OAK_LAB_FRONT_ROOM_BATTLE
+	const SCENE_OAK_LAB_FRONT_ROOM_AFTER_TALKING_TO_CLERK
 
 ; wOakLabBackRoomSceneID
 	const_def 1
