@@ -54,7 +54,7 @@ ItemNames::
 	db "X SPECIAL@"
 	db "COIN CASE@"
 	db "ITEMFINDER@"
-	db "TERU-SAMA@"
+	db "ROOM PASS@"
 	db "EXP.SHARE@"
 	db "OLD ROD@"
 	db "GOOD ROD@"
