@@ -391,12 +391,29 @@ BrockGroup:
 	db -1 ; end
 
 MistyGroup:
-	; MISTY (1)
-	db "MISTY@", TRAINERTYPE_MOVES
-	db 50, GOLDUCK,    SURF, DISABLE, PSYCH_UP, PSYCHIC_M
-	db 50, QUAGSIRE,   SURF, AMNESIA, EARTHQUAKE, RAIN_DANCE
-	db 52, LAPRAS,     SURF, PERISH_SONG, BLIZZARD, RAIN_DANCE
-	db 56, STARMIE,    SURF, CONFUSE_RAY, RECOVER, ICE_BEAM
+	; MISTY (1); used for OAK battle in ryukyu
+	db "@", TRAINERTYPE_MOVES
+	db 66, TAUROS,      THRASH, TAKE_DOWN, SWAGGER, DOUBLE_TEAM
+	db 67, EXEGGUTOR,   LEECH_SEED, CONFUSION, SLEEP_POWDER, SOLARBEAM
+	db 68, ARCANINE,    FLAMETHROWER, SUNNY_DAY, EXTREMESPEED, TAKE_DOWN
+	db 70, GYARADOS,    EARTHQUAKE, SURF, FIRE_BLAST, RAIN_DANCE
+	db 70, AQUARIUS,    BODY_SLAM, ICY_WIND, SURF, BUBBLEBEAM
+	db -1 ; end
+	
+	db "@", TRAINERTYPE_MOVES
+	db 66, TAUROS,      THRASH, TAKE_DOWN, SWAGGER, DOUBLE_TEAM
+	db 67, EXEGGUTOR,   LEECH_SEED, CONFUSION, SLEEP_POWDER, SOLARBEAM
+	db 68, ARCANINE,    FLAMETHROWER, SUNNY_DAY, EXTREMESPEED, TAKE_DOWN
+	db 70, GYARADOS,    EARTHQUAKE, SURF, FIRE_BLAST, RAIN_DANCE
+	db 70, BLOSSOMITE,  SYNTHESIS, SLAM, RAZOR_LEAF, SOLARBEAM
+	db -1 ; end
+	
+	db "@", TRAINERTYPE_MOVES
+	db 66, TAUROS,      THRASH, TAKE_DOWN, SWAGGER, DOUBLE_TEAM
+	db 67, EXEGGUTOR,   LEECH_SEED, CONFUSION, SLEEP_POWDER, SOLARBEAM
+	db 68, ARCANINE,    FLAMETHROWER, SUNNY_DAY, EXTREMESPEED, TAKE_DOWN
+	db 70, GYARADOS,    EARTHQUAKE, SURF, FIRE_BLAST, RAIN_DANCE
+	db 70, DYNABEAR,    ROAR, FLAME_WHEEL, SCARY_FACE, FLAMETHROWER
 	db -1 ; end
 
 LtSurgeGroup:
